cmake_minimum_required(VERSION 3.0)
#project(jsonParserTests VERSION "0.0.1")
#
#message(STATUS "jsonParserPublicInc: " ${jsonParserPublicInc})
#message(STATUS "jsonParserLib: " ${jsonParserLib})
#include_directories(${jsonParserPublicInc})
#add_executable(jsonParserTmpTest jsonParserTmpTest.cpp)
#target_link_libraries(jsonParserTmpTest
#    ${jsonParserLib}
#)
#
#add_dependencies(jsonParserTmpTest jsonParser)

